# dial-reference

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile.am  README  configure.ac
client/: DialConformance.h  DialDiscovery.h  Makefile.am
server/: LinuxInterfaces.c  Makefile.am  dial_data.c  dial_server.c  main.c  mongoose.c  nf_callbacks.c  nf_callbacks.h  quick_ssdp.c  url_lib.c  url_lib.h
server/tests/: Makefile.am  TESTS  run_tests.c  test_dial_data.c  test_url_lib.c
